# GlibGame

./: CMakeLists.txt
headers/: main_game_object.hpp  testipaska.hpp  vanishing_object.hpp
src/: main.cpp  main_game_object.cpp  testipaska.cpp  vanishing_object.cpp
